removed external parameters

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bfd00cee-c28e-4348-a00c-4dc9ab459431",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Local -> all other imports in source files\n",
     "import settings.custom\n",
-    "\n",
     "from prophandler import PropHandler\n",
-    "from settings.params import MODE, SITE # Anachronistic"
+    "\n",
+    "SITE='draftkings'\n",
+    "MODE='main-slate'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7ef69279-5eb1-4eff-83c7-13c0d5330c2d",
    "metadata": {},
    "outputs": [],
@@ -29,7 +30,17 @@
    "execution_count": null,
    "id": "31499168-59c4-4a91-88b5-3e7eb2061c4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   ----------------------------------------\n",
+      "   Beginning WebScrape of NBA Player Props.\n",
+      "   ----------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "handler.load()"
    ]
@@ -48,10 +59,26 @@
    "execution_count": null,
    "id": "87a34ccc-97e1-4677-9cbc-0cf98980fe46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following players have been added:\n"
+     ]
+    }
+   ],
    "source": [
-    "# handler.constant_scrape()"
+    "handler.constant_scrape()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a816b1ec-671e-4600-86be-64073a3b5312",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
