--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -47,7 +47,8 @@
    "metadata": {},
    "source": [
     "#### handler.constant_scrape()\n",
-    "##### Repeatedly scrapes props, making sure always as up to date as possible, however it has an infinite loop built in."
+    "##### Repeatedly scrapes props, making sure always as up to date as possible and saving behind the scenes.\n",
+    "##### However it has an infinite loop built in."
    ]
   },
   {
@@ -59,14 +60,6 @@
    "source": [
     "handler.constant_scrape()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "560eb2dd-ac6d-4851-baf6-6bf509eae56a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
