cleaner notebook, fixed naming issue in handler class

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -12,7 +12,7 @@
     "from prophandler import PropHandler\n",
     "\n",
     "SITE='draftkings'\n",
-    "MODE='main-slate'"
+    "MODE='single-game'"
    ]
   },
   {
@@ -37,7 +37,9 @@
     "handler.load(\n",
     "    # Late additions to injury report\n",
     "    inactive=[],\n",
-    "    update=False\n",
+    "    update=True,\n",
+    "    sort='fpts',\n",
+    "\n",
     ")"
    ]
   },
@@ -46,9 +48,9 @@
    "id": "d5e4e863-46c2-4fbb-b366-669683d2d1b9",
    "metadata": {},
    "source": [
-    "#### handler.constant_scrape()\n",
+    "#### `handler.constant_scrape()`\n",
     "##### Repeatedly scrapes props, making sure always as up to date as possible and saving behind the scenes.\n",
-    "##### However it has an infinite loop built in."
+    "##### Caveats include the fact it has an infinite loop built in and that it is pretty useless when it comes to playoffs since books much more on top of lines then."
    ]
   },
   {
@@ -58,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "handler.constant_scrape()"
+    "# handler.constant_scrape()"
    ]
   }
  ],
@@ -78,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
