--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bfd00cee-c28e-4348-a00c-4dc9ab459431",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7ef69279-5eb1-4eff-83c7-13c0d5330c2d",
    "metadata": {},
    "outputs": [],
@@ -27,12 +27,318 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "31499168-59c4-4a91-88b5-3e7eb2061c4e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   ----------------------------------------\n",
+      "   Beginning WebScrape of NBA Player Props.\n",
+      "   ----------------------------------------\n",
+      "ScrapeProps performance time: 0m 12s.\n",
+      "\n",
+      "   ================\n",
+      "   16 TOTAL PLAYERS\n",
+      "   ================\n",
+      "2 teams total...\n",
+      "Missing: 0% of teams...\n",
+      "\n",
+      "      num-players\n",
+      "team             \n",
+      "DAL             9\n",
+      "BOS             7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pos</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>team</th>\n",
+       "      <th>fpts</th>\n",
+       "      <th>e_fpts</th>\n",
+       "      <th>fpts/$</th>\n",
+       "      <th>e_fpts/$</th>\n",
+       "      <th>value</th>\n",
+       "      <th>cpt_pts</th>\n",
+       "      <th>cpt_sal</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Luka Doncic</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>13800</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>60.12</td>\n",
+       "      <td>32.22</td>\n",
+       "      <td>4.36</td>\n",
+       "      <td>2.33</td>\n",
+       "      <td>-8.88</td>\n",
+       "      <td>90.18</td>\n",
+       "      <td>20700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jayson Tatum</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>11400</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>52.88</td>\n",
+       "      <td>27.39</td>\n",
+       "      <td>4.64</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>-4.12</td>\n",
+       "      <td>79.32</td>\n",
+       "      <td>17100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jaylen Brown</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>9800</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>44.62</td>\n",
+       "      <td>22.10</td>\n",
+       "      <td>4.55</td>\n",
+       "      <td>2.26</td>\n",
+       "      <td>-4.38</td>\n",
+       "      <td>66.93</td>\n",
+       "      <td>14700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kyrie Irving</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>9000</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>37.88</td>\n",
+       "      <td>19.98</td>\n",
+       "      <td>4.21</td>\n",
+       "      <td>2.22</td>\n",
+       "      <td>-7.12</td>\n",
+       "      <td>56.82</td>\n",
+       "      <td>13500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jrue Holiday</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>31.88</td>\n",
+       "      <td>16.44</td>\n",
+       "      <td>4.55</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>-3.12</td>\n",
+       "      <td>47.82</td>\n",
+       "      <td>10500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Derrick White</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>7600</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>30.12</td>\n",
+       "      <td>16.54</td>\n",
+       "      <td>3.96</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>-7.88</td>\n",
+       "      <td>45.18</td>\n",
+       "      <td>11400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PJ Washington</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>5800</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>23.38</td>\n",
+       "      <td>13.02</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>2.24</td>\n",
+       "      <td>-5.62</td>\n",
+       "      <td>35.07</td>\n",
+       "      <td>8700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dereck Lively</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>5400</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>23.37</td>\n",
+       "      <td>12.10</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>2.24</td>\n",
+       "      <td>-3.63</td>\n",
+       "      <td>35.06</td>\n",
+       "      <td>8100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Al Horford</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>23.12</td>\n",
+       "      <td>12.10</td>\n",
+       "      <td>3.85</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>-6.88</td>\n",
+       "      <td>34.68</td>\n",
+       "      <td>9000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Daniel Gafford</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>4200</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>12.63</td>\n",
+       "      <td>7.12</td>\n",
+       "      <td>3.01</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>-8.37</td>\n",
+       "      <td>18.94</td>\n",
+       "      <td>6300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sam Hauser</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>3400</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>12.12</td>\n",
+       "      <td>5.69</td>\n",
+       "      <td>3.56</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>-4.88</td>\n",
+       "      <td>18.18</td>\n",
+       "      <td>5100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Derrick Jones</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>3800</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>11.62</td>\n",
+       "      <td>6.26</td>\n",
+       "      <td>3.06</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>-7.38</td>\n",
+       "      <td>17.43</td>\n",
+       "      <td>5700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Josh Green</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>9.62</td>\n",
+       "      <td>4.32</td>\n",
+       "      <td>3.21</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>-5.38</td>\n",
+       "      <td>14.43</td>\n",
+       "      <td>4500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Payton Pritchard</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>2800</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>8.88</td>\n",
+       "      <td>4.11</td>\n",
+       "      <td>3.17</td>\n",
+       "      <td>1.47</td>\n",
+       "      <td>-5.12</td>\n",
+       "      <td>13.32</td>\n",
+       "      <td>4200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Maxi Kleber</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>7.38</td>\n",
+       "      <td>3.33</td>\n",
+       "      <td>3.08</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>-4.62</td>\n",
+       "      <td>11.07</td>\n",
+       "      <td>3600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dante Exum</th>\n",
+       "      <td>UTIL</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>6.38</td>\n",
+       "      <td>2.92</td>\n",
+       "      <td>2.90</td>\n",
+       "      <td>1.33</td>\n",
+       "      <td>-4.62</td>\n",
+       "      <td>9.57</td>\n",
+       "      <td>3300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   pos  salary team   fpts  e_fpts  fpts/$  e_fpts/$  value  cpt_pts  cpt_sal\n",
+       "name                                                                                         \n",
+       "Luka Doncic       UTIL   13800  DAL  60.12   32.22    4.36      2.33  -8.88    90.18    20700\n",
+       "Jayson Tatum      UTIL   11400  BOS  52.88   27.39    4.64      2.40  -4.12    79.32    17100\n",
+       "Jaylen Brown      UTIL    9800  BOS  44.62   22.10    4.55      2.26  -4.38    66.93    14700\n",
+       "Kyrie Irving      UTIL    9000  DAL  37.88   19.98    4.21      2.22  -7.12    56.82    13500\n",
+       "Jrue Holiday      UTIL    7000  BOS  31.88   16.44    4.55      2.35  -3.12    47.82    10500\n",
+       "Derrick White     UTIL    7600  BOS  30.12   16.54    3.96      2.18  -7.88    45.18    11400\n",
+       "PJ Washington     UTIL    5800  DAL  23.38   13.02    4.03      2.24  -5.62    35.07     8700\n",
+       "Dereck Lively     UTIL    5400  DAL  23.37   12.10    4.33      2.24  -3.63    35.06     8100\n",
+       "Al Horford        UTIL    6000  BOS  23.12   12.10    3.85      2.02  -6.88    34.68     9000\n",
+       "Daniel Gafford    UTIL    4200  DAL  12.63    7.12    3.01      1.70  -8.37    18.94     6300\n",
+       "Sam Hauser        UTIL    3400  BOS  12.12    5.69    3.56      1.67  -4.88    18.18     5100\n",
+       "Derrick Jones     UTIL    3800  DAL  11.62    6.26    3.06      1.65  -7.38    17.43     5700\n",
+       "Josh Green        UTIL    3000  DAL   9.62    4.32    3.21      1.44  -5.38    14.43     4500\n",
+       "Payton Pritchard  UTIL    2800  BOS   8.88    4.11    3.17      1.47  -5.12    13.32     4200\n",
+       "Maxi Kleber       UTIL    2400  DAL   7.38    3.33    3.08      1.39  -4.62    11.07     3600\n",
+       "Dante Exum        UTIL    2200  DAL   6.38    2.92    2.90      1.33  -4.62     9.57     3300"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "handler.load(\n",
     "    # Late additions to injury report\n",
@@ -55,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "92456848-0aed-421d-8d14-936458e71dcc",
    "metadata": {},
    "outputs": [],
