reformatted all code with black

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -11,8 +11,8 @@
     "import settings.custom\n",
     "from prophandler import PropHandler\n",
     "\n",
-    "SITE='draftkings'\n",
-    "MODE='single-game'"
+    "SITE = \"draftkings\"\n",
+    "MODE = \"single-game\""
    ]
   },
   {
@@ -344,8 +344,7 @@
     "    # Late additions to injury report\n",
     "    inactive=[],\n",
     "    update=True,\n",
-    "    sort='fpts',\n",
-    "\n",
+    "    sort=\"fpts\",\n",
     ")"
    ]
   },
