completed refactor, standardized utility functions throughout, removed misc commented out prev code

--- a/src/props.ipynb
+++ b/src/props.ipynb
@@ -9,18 +9,15 @@
    "source": [
     "import os\n",
     "import glob\n",
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Local -> all other imports in source files\n",
     "import settings.custom\n",
     "from prophandler import PropHandler\n",
-    "\n",
     "from visualizations import prop_ratio\n",
     "from backup_projections import load_backup_projections, create_historical_props\n",
     "from private import _load_stokastic_data\n",
-    "from __utils import load_injuries, output_msgs\n",
+    "from __utils import _load_injuries, _output_msgs\n",
     "\n",
     "########################################################################################\n",
     "# CONTEST SETTINGS\n",
@@ -31,9 +28,9 @@
     "########################################################################################\n",
     "# PLAYER SETTINGS\n",
     "########################################################################################\n",
-    "# Won't work unless you input a PATH (default is my local machine) to FanDuel contest file \n",
-    "# SITE doesn't matter, DK does not have injury columns, disable if you want\n",
-    "DROP = load_injuries() + []\n",
+    "# Won't work unless you input a PATH  to FanDuel contest file `_load_injuries(path=path/to/fanduel/data/.csv)`\n",
+    "# SITE agnostic, DK does not have injury columns, disable if you want. Default `path` is my local machine \n",
+    "DROP = _load_injuries() + []\n",
     "# Historical prop dataset\n",
     "HISTORICAL = create_historical_props()\n",
     "\"\"\"\n",
@@ -79,8 +76,7 @@
     "    hist_diff=lambda df_: df_.fpts-df_.historical,\n",
     "    hist_ratio=lambda df_: (df_.fpts/df_.historical).round(2),\n",
     "    rank=lambda df_: df_.index+1\n",
-    ").set_index('name')\n",
-    "\n"
+    ").set_index('name')"
    ]
   },
   {
@@ -98,7 +94,7 @@
     "    except ValueError:\n",
     "        print('No props available. Using backup projections for all players.\\n')\n",
     "else:\n",
-    "    output_msgs('All players with props', char='=')\n",
+    "    _output_msgs('All players with props', char='=')\n",
     "\n",
     "display(df)"
    ]
@@ -107,11 +103,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22b8beb4-019a-44af-8a11-2c676cde957e",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "team_dfs = {\n",
@@ -124,67 +116,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "208ba7c9-9acf-4653-ae6f-c23781f21692",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "# team_dfs[str(np.random.choice(list(team_dfs.keys())))]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d5e4e863-46c2-4fbb-b366-669683d2d1b9",
-   "metadata": {},
-   "source": [
-    "#### `handler.constant_scrape()`\n",
-    "##### Repeatedly scrapes props, making sure always as up to date as possible and saving behind the scenes.\n",
-    "##### Caveats include the fact it has an infinite loop built in and that it is pretty useless when it comes to playoffs since books much more on top of lines then."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bf891d0-c584-4376-b77a-fdb87a5efe8c",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# df = PropHandler(\n",
-    "#     SITE,\n",
-    "#     MODE,\n",
-    "#     edits=EDITS,\n",
-    "#     drop=DROP,\n",
-    "#     constant=True,\n",
-    "#     # override_edits=OVERRIDE_EDITS\n",
-    "# ).constant_scrape(verbose=0) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1b00f31-619b-4eaf-95e2-7968a9102278",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "team_dfs['UTA']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "91c6cb86-4c16-4e95-980c-dd00e9a24bf5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# team_dfs['TEAM_INITS']"
+   ]
   }
  ],
  "metadata": {
