fixed param input confusion

--- a/src/props-constant.ipynb
+++ b/src/props-constant.ipynb
@@ -69,7 +69,7 @@
     "    edits=EDITS,\n",
     "    drop=DROP,\n",
     "    constant=True,\n",
-    "    # override_edits=OVERRIDE_EDITS\n",
+    "    override_edits=OVERRIDE_EDITS\n",
     ").constant_scrape(verbose=0) "
    ]
   }
