--- a/src/props.ipynb
+++ b/src/props.ipynb
@@ -66,7 +66,8 @@
     "    edits=EDITS,\n",
     "    ownership=OWNERSHIP,\n",
     "    drop=DROP,\n",
-    "    override_edits=OVERRIDE_EDITS\n",
+    "    override_edits=OVERRIDE_EDITS,\n",
+    "    # scraper_kwargs={'team_date_ranges': {'LAC': range(1,3)}} # If Zubac OUT\n",
     ").load(\n",
     "    update=True,\n",
     "    sort=\"e_fpts/$\",\n",
