--- a/src/props-constant.ipynb
+++ b/src/props-constant.ipynb
@@ -9,18 +9,15 @@
    "source": [
     "import os\n",
     "import glob\n",
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Local -> all other imports in source files\n",
     "import settings.custom\n",
     "from prophandler import PropHandler\n",
-    "\n",
     "from visualizations import prop_ratio\n",
     "from backup_projections import load_backup_projections, create_historical_props\n",
     "from private import _load_stokastic_data\n",
-    "from __utils import load_injuries, output_msgs\n",
+    "from __utils import _load_injuries, _output_msgs\n",
     "\n",
     "########################################################################################\n",
     "# CONTEST SETTINGS\n",
@@ -31,9 +28,11 @@
     "########################################################################################\n",
     "# PLAYER SETTINGS\n",
     "########################################################################################\n",
-    "# Won't work unless you input a PATH (default is my local machine) to FanDuel contest file \n",
-    "# SITE doesn't matter, DK does not have injury columns, disable if you want\n",
-    "DROP = load_injuries() + []\n",
+    "# Won't work unless you input a PATH  to FanDuel contest file `_load_injuries(path=path/to/fanduel/data/.csv)`\n",
+    "# SITE agnostic, DK does not have injury columns, disable if you want. Default `path` is my local machine\n",
+    "# Easiest way: save FD contest file as data/current-fanduel.csv -> DROP = _load_injuries(path='../data/current-fanduel.csv') + LATE_DROPS\n",
+    "LATE_DROPS = []\n",
+    "DROP = _load_injuries() + LATE_DROPS\n",
     "# Historical prop dataset\n",
     "HISTORICAL = create_historical_props()\n",
     "\"\"\"\n",
