standardized naming conventions, refactored to include error handling as well as easily have additional errors defined in _errors.py, modularized data loading for error handling

--- a/src/props.ipynb
+++ b/src/props.ipynb
@@ -17,7 +17,7 @@
     "from visualizations import prop_ratio\n",
     "from backup_projections import load_backup_projections, create_historical_props\n",
     "from private import _load_stokastic_data\n",
-    "from __utils import _load_injuries, _output_msgs\n",
+    "from _utils import _load_injuries, _output_msgs\n",
     "\n",
     "########################################################################################\n",
     "# CONTEST SETTINGS\n",
@@ -32,7 +32,7 @@
     "# SITE agnostic, DK does not have injury columns, disable if you want. Default `path` is my local machine\n",
     "# Easiest way: save FD contest file as data/current-fanduel.csv -> DROP = _load_injuries(path='../data/current-fanduel.csv') + LATE_DROPS\n",
     "LATE_DROPS = []\n",
-    "DROP = _load_injuries() + LATE_DROPS\n",
+    "DROP = _load_injuries(report=True) + LATE_DROPS\n",
     "# Historical prop dataset\n",
     "HISTORICAL = create_historical_props()\n",
     "\"\"\"\n",
