--- a/src/props.ipynb
+++ b/src/props.ipynb
@@ -42,11 +42,11 @@
     "- MUST use own .json files\n",
     "\"\"\"\n",
     "# JSON file of player projections to use if no props currently listed\n",
-    "# BACKUP_EDITS_FILE = '../data/backup_projections.json'\n",
+    "BACKUP_EDITS_FILE = '../data/backup_projections.json' # Generic version that may not be accurate even if code runs\n",
     "# Using load_backup_projections only reads files with just {name:fpts} so no ownership returned\n",
-    "# EDITS, OWNERSHIP = load_backup_projections(file=BACKUP_EDITS_FILE), dict()\n",
+    "EDITS, OWNERSHIP = load_backup_projections(file=BACKUP_EDITS_FILE), dict()\n",
     "# Premium third party data for personal use, hidden in private file\n",
-    "EDITS, OWNERSHIP = _load_stokastic_data(drop=DROP)\n",
+    "# EDITS, OWNERSHIP = _load_stokastic_data(drop=DROP)\n",
     "########################################################################################\n",
     "# Prop projections always take precedence unless overriden\n",
     "OVERRIDE_EDITS = {}\n",
