cleaned up team_dfs

--- a/src/props.ipynb
+++ b/src/props.ipynb
@@ -110,8 +110,8 @@
    "source": [
     "team_dfs = {\n",
     "    team:\n",
-    "    df.loc[df['team'] == team]\n",
-    "    for team in df['team'].drop_duplicates()\n",
+    "    df.loc[df.team == team]\n",
+    "    for team in df.team.drop_duplicates()\n",
     "}"
    ]
   },
