migrated contest settings to separate file so defined as global and prevent notebook issues

--- a/src/props-constant.ipynb
+++ b/src/props-constant.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfd00cee-c28e-4348-a00c-4dc9ab459431",
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,9 @@
     "from visualizations import prop_ratio\n",
     "from backup_projections import load_backup_projections, create_historical_props\n",
     "from private import _load_stokastic_data\n",
-    "from __utils import _load_injuries, _output_msgs\n",
+    "from _utils import _load_injuries, _output_msgs\n",
+    "from _contest import SITE, MODE\n",
     "\n",
-    "########################################################################################\n",
-    "# CONTEST SETTINGS\n",
-    "########################################################################################\n",
-    "SITE = \"draftkings\"\n",
-    "MODE = \"classic\"\n",
-    "# MODE = 'showdown'\n",
     "########################################################################################\n",
     "# PLAYER SETTINGS\n",
     "########################################################################################\n",
@@ -32,7 +27,7 @@
     "# SITE agnostic, DK does not have injury columns, disable if you want. Default `path` is my local machine\n",
     "# Easiest way: save FD contest file as data/current-fanduel.csv -> DROP = _load_injuries(path='../data/current-fanduel.csv') + LATE_DROPS\n",
     "LATE_DROPS = []\n",
-    "DROP = _load_injuries() + LATE_DROPS\n",
+    "DROP = _load_injuries(report=True) + LATE_DROPS\n",
     "# Historical prop dataset\n",
     "HISTORICAL = create_historical_props()\n",
     "\"\"\"\n",
@@ -42,11 +37,11 @@
     "- MUST use own .json files\n",
     "\"\"\"\n",
     "# JSON file of player projections to use if no props currently listed\n",
-    "# BACKUP_EDITS_FILE = '../data/backup_projections.json'\n",
+    "BACKUP_EDITS_FILE = '../data/backup_projections.json' # Generic version that may not be accurate even if code runs\n",
     "# Using load_backup_projections only reads files with just {name:fpts} so no ownership returned\n",
-    "# EDITS, OWNERSHIP = load_backup_projections(file=BACKUP_EDITS_FILE), dict()\n",
-    "# Premium third party data for personal use, hidden in private file\n",
-    "EDITS, OWNERSHIP = _load_stokastic_data(drop=DROP)\n",
+    "EDITS, OWNERSHIP = load_backup_projections(file=BACKUP_EDITS_FILE), dict()\n",
+    "# Premium third party data for personal use, hidden in private file but showing how to customize input data\n",
+    "# EDITS, OWNERSHIP = _load_stokastic_data(drop=DROP)\n",
     "########################################################################################\n",
     "# Prop projections always take precedence unless overriden\n",
     "OVERRIDE_EDITS = {}\n",
@@ -58,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bf891d0-c584-4376-b77a-fdb87a5efe8c",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +66,14 @@
     "    override_edits=OVERRIDE_EDITS\n",
     ").constant_scrape(verbose=0) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
