--- a/src/props.ipynb
+++ b/src/props.ipynb
@@ -18,13 +18,8 @@
     "from backup_projections import load_backup_projections, create_historical_props\n",
     "from private import _load_stokastic_data\n",
     "from _utils import _load_injuries, _output_msgs\n",
+    "from _contest import SITE, MODE\n",
     "\n",
-    "########################################################################################\n",
-    "# CONTEST SETTINGS\n",
-    "########################################################################################\n",
-    "SITE = \"draftkings\"\n",
-    "MODE = \"classic\"\n",
-    "# MODE = 'showdown'\n",
     "########################################################################################\n",
     "# PLAYER SETTINGS\n",
     "########################################################################################\n",
@@ -45,7 +40,7 @@
     "BACKUP_EDITS_FILE = '../data/backup_projections.json' # Generic version that may not be accurate even if code runs\n",
     "# Using load_backup_projections only reads files with just {name:fpts} so no ownership returned\n",
     "EDITS, OWNERSHIP = load_backup_projections(file=BACKUP_EDITS_FILE), dict()\n",
-    "# Premium third party data for personal use, hidden in private file\n",
+    "# Premium third party data for personal use, hidden in private file but showing how to customize input data\n",
     "# EDITS, OWNERSHIP = _load_stokastic_data(drop=DROP)\n",
     "########################################################################################\n",
     "# Prop projections always take precedence unless overriden\n",
